--- a/src/assets/sass/utils/_reset.scss
+++ b/src/assets/sass/utils/_reset.scss
@@ -96,7 +96,9 @@ video {
 }
 
 body {
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: "Mulish-Regular";
+  font-size: 16px;
+  color: #333333;
 }
 /* make sure to set some focus styles for accessibility */
 :focus {
