Create a component card with information, and put styles for responsive

--- a/src/assets/sass/components/Card/_PxCard.scss
+++ b/src/assets/sass/components/Card/_PxCard.scss
@@ -16,6 +16,8 @@
     justify-content: flex-start;
   }
   &__details {
+    width: 100%;
+    height: 28px;
     display: flex;
     justify-content: space-between;
     align-items: center;
