--- a/src/assets/sass/components/Header/_PxHeader.scss
+++ b/src/assets/sass/components/Header/_PxHeader.scss
@@ -1,3 +1,8 @@
 .header {
   padding: 19px 13px 0;
+  @media screen and (min-width: 992px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
