--- a/src/assets/sass/components/Header/_PxHeader.scss
+++ b/src/assets/sass/components/Header/_PxHeader.scss
@@ -1,5 +1,14 @@
 .header {
   padding: 19px 13px 0;
+  .overlay {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    z-index: 5;
+  }
   @media screen and (min-width: 992px) {
     display: flex;
     align-items: center;
