--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -5,6 +5,7 @@
   border-radius: 16px;
   box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  z-index: 10;
   &__form {
     display: flex;
     align-items: center;
@@ -70,6 +71,7 @@
     margin: 0;
     padding: 18px 15px;
     max-width: unset;
+    border-radius: 0;
     .search__modal--title {
       display: flex;
       align-items: center;
