--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -47,6 +47,7 @@
     width: 100%;
     border-left: 1px solid #f2f2f2;
     color: #eb5757;
+    cursor: pointer;
     &--text {
       font-family: "Mulish-Bold";
       font-size: 14px;
