--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -1,4 +1,6 @@
 @import "./utils/_reset.scss";
-@import "./utils/_fonts.scss";
 @import "./utils/_variables.scss";
+@import "./utils/_fonts.scss";
+@import "./utils/_animation.scss";
+@import "./utils/_overlay.scss";
 @import "./utils/_wrapper.scss";
