--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -73,6 +73,8 @@
     padding: 18px 15px;
     max-width: unset;
     border-radius: 0;
+    animation: fade 0.5s;
+    animation-timing-function: ease-in;
     .search__modal--title {
       display: flex;
       align-items: center;
