--- a/src/assets/sass/components/Header/_PxHeader.scss
+++ b/src/assets/sass/components/Header/_PxHeader.scss
@@ -5,5 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 13px;
+    margin: 32px auto 60px auto;
   }
 }
