--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -145,6 +145,7 @@
   }
   @media screen and (min-width: 992px) {
     width: 35%;
+    margin: 0;
     //Search modal mode
     &.is-active {
       height: 60vh;
