--- a/src/assets/sass/components/Header/_PxResultLocation.scss
+++ b/src/assets/sass/components/Header/_PxResultLocation.scss
@@ -18,8 +18,8 @@
     }
   }
   @media screen and (min-width: 992px) {
-    max-width: 950px;
-    margin: 35px auto 0;
+    max-width: 362px;
+    margin: 35px 0 0;
     width: 100%;
   }
   @media screen and (min-width: 1200px) {
