--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -111,6 +111,13 @@
   @media screen and (min-width: 992px) {
     width: 35%;
     margin: 0;
+    &__resutl {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      max-width: 950px;
+      margin: 0 auto;
+    }
     //Search modal mode
     &.is-active {
       height: 460px;
