--- a/src/assets/sass/components/Header/_PxResultLocation.scss
+++ b/src/assets/sass/components/Header/_PxResultLocation.scss
@@ -1,12 +1,11 @@
 .result-location {
   display: none;
-  max-height: calc(340px - 50px);
-  overflow: hidden auto;
   &.is-active {
-    display: block;
+    display: flex;
   }
   &__list {
     padding: 0 30px;
+    width: 100%;
   }
   &__item {
     margin: 0 0 35px 0;
@@ -16,13 +15,5 @@
       font-size: 19px;
       margin: 0 10px 0 0;
     }
-  }
-  @media screen and (min-width: 992px) {
-    max-width: 362px;
-    margin: 35px 0 0;
-    width: 100%;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1248px;
   }
 }
