--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -144,6 +144,10 @@
   @media screen and (min-width: 1200px) {
     width: 100%;
     max-width: 300px;
+    &__resutl {
+      max-width: 1248px;
+    }
+
     //Search modal mode
     &.is-active {
       .search__modal--title {
