Add funcionality for search location

--- a/src/assets/sass/components/Header/_PxSearch.scss
+++ b/src/assets/sass/components/Header/_PxSearch.scss
@@ -163,6 +163,12 @@
       &.is-active {
         max-width: 1248px;
       }
+      //Search guest
+      &.is-search-guest {
+        .result-guest {
+          margin: 35px 270px 0 0;
+        }
+      }
     }
 
     //Search modal mode
