Change name of reactive varibales and create tooltip component

--- a/src/assets/sass/components/Card/_PxCard.scss
+++ b/src/assets/sass/components/Card/_PxCard.scss
@@ -60,4 +60,9 @@
   &__descripton {
     font-family: "Montserrat-SemiBold";
   }
+  @media screen and (min-width: 992px) {
+    &__type--host {
+      white-space: nowrap;
+    }
+  }
 }
