--- a/src/assets/sass/components/Input/_PxAumentDicrement.scss
+++ b/src/assets/sass/components/Input/_PxAumentDicrement.scss
@@ -6,6 +6,9 @@
       margin: 0 0 6px 0;
       display: inline-block;
     }
+    p {
+      color: #cccccc;
+    }
   }
   &-actions {
     button,
